--- a/JavaScript/20230410/001_DOM_접근.html
+++ b/JavaScript/20230410/001_DOM_접근.html
@@ -66,7 +66,7 @@
 
       container.querySelector("li"); // 찾고자 하는 요소가 여러개라면 제일 첫번째를 반환한다.
 
-      container.querySelector(".item-second"); // .아이디로 찾기 #클래스로찾기 (css 선택자)
+      container.querySelector(".item-second"); // .클래스로 찾기 #아이디로찾기 (css 선택자)
       container.querySelector("li:last-child"); // (css 선택자 모두 사용 가능) 짜장면 출력
 
       container.querySelectorAll("li"); // 모든 요소에 접근하기
