--- a/develop/메모장/index.html
+++ b/develop/메모장/index.html
@@ -22,7 +22,7 @@
     <main>
       <section>
         <input placeholder="link를 첨부해주세요." type="text" id="linktxt" />
-        <div class="txt-btn">
+        <div class="toolbar">
           <button class="fontbold">Bold</button>
           <button class="fontred">text-red</button>
         </div>
@@ -55,7 +55,8 @@
         }
 
         if (link.startsWith("https") && comment !== "") {
-          allMemo.push({ link, comment, len: allMemo.length });
+          const saveDate = new Date().toLocaleString(); // 작성한 날짜 저장
+          allMemo.push({ link, comment, saveDate, len: allMemo.length }); // allMemo에 날짜 추가
 
           localStorage.setItem("allMemo", JSON.stringify(allMemo));
           render();
@@ -63,13 +64,15 @@
           // link와 comment, comment btn 초기화
           document.querySelector("#linktxt").value = "";
           document.querySelector("#comment").value = "";
-          document.querySelector("#comment").classList.remove("font-weight-bold");
+          document
+            .querySelector("#comment")
+            .classList.remove("font-weight-bold");
           document.querySelector("#comment").classList.remove("font-color-red");
         } else {
           alert("link와 comment를 입력해주세요!");
         }
       }
-      
+
       const btnbold = document.querySelector(".fontbold");
       btnbold.addEventListener("click", function () {
         const comment = document.querySelector("#comment");
@@ -82,7 +85,7 @@
         comment.classList.toggle("font-color-red");
       });
 
-      function render() {
+      /*function render() {
         const display = document.querySelector("#display ul");
         display.innerHTML = "";
 
@@ -103,10 +106,53 @@
 
           const li = document.createElement("li");
 
+          // comment 요소에 font-weight-bold 클래스가 있는 경우 해당 클래스를 적용
+          if (saveComment.classList.contains("font-weight-bold")) {
+            saveComment.style.fontWeight = "Bold";
+            li.appendChild(saveComment);
+          }else {
+            saveComment.style.fontWeight = "Normal"
+            li.appendChild(saveComment);
+          }
+
           li.appendChild(saveId);
           li.appendChild(saveLink); // a 태그 추가
-          li.appendChild(saveComment);
           li.appendChild(deleteMemoBtn);
+
+          document.querySelector("#display ul").appendChild(li);
+        }
+      }*/
+
+      function render() {
+        const display = document.querySelector("#display ul");
+        display.innerHTML = "";
+
+        for (const item of allMemo) {
+          const saveLink = document.createElement("a");
+          const saveComment = document.createElement("p");
+          const saveId = document.createElement("h3");
+          const saveDate = document.createElement("p"); // saveDate 변수 선언
+          const deleteMemoBtn = document.createElement("button");
+
+          saveLink.textContent = item.link;
+          saveLink.href = item.link;
+          saveLink.target = "_blank";
+          saveComment.textContent = item.comment;
+          saveId.textContent = `< ${item.len + 1}번째 - 서랍장 >`;
+          saveDate.innerHTML = item.saveDate; // 저장한 날짜를 표시
+
+          deleteMemoBtn.textContent = "지우기";
+          deleteMemoBtn.setAttribute("id", item.len);
+          deleteMemoBtn.setAttribute("onclick", "remove()");
+
+          const li = document.createElement("li");
+
+          li.appendChild(saveId);
+          li.appendChild(saveLink);
+          li.appendChild(saveComment);
+          li.appendChild(saveDate); // saveDate 엘리먼트를 자식으로 추가
+          li.appendChild(deleteMemoBtn);
+          
 
           document.querySelector("#display ul").appendChild(li);
         }
