--- a/develop/밴딩머신/index.html
+++ b/develop/밴딩머신/index.html
@@ -20,8 +20,17 @@
     <section class="section1">
       <h2 class="a11y-hidden">판매 음료</h2>
       <ul class="cola-list">
+        <!-- <li>
+          <button disabled class="btn-cola" type="button">
+            <img class="cola-img" src="./img/cola-violet.png" alt="">
+            <span class="cola-name">Violet_Cola</span>
+            <strong class="cola-price">1000원</strong>
+            <strong class="soldout">
+              <span>품절</span>
+            </strong>
+          </button>
+        </li> -->
       </ul>
-
       <div class="container">
         <div class="bg-box">
           <h2 class="title">잔액</h2>
@@ -30,22 +39,30 @@
         <button class="btn" type="button">거스름돈 반환</button>
 
         <label for="input-money" class="a11y-hidden">금액 투입(단위:원)</label>
-        <input id="input-money" min="1000" step="1000" type="number" placeholder="입금액 입력">
+        <input id="input-money" value="10000" min="1000" step="1000" type="number" placeholder="입금액 입력">
         <button class="btn" type="button">입금</button>
 
         <h2 class="a11y-hidden">장바구니</h2>
         <ul class="get-list">
-        
+          <!-- <li>
+            <img src="./img/cola-original.png" alt="">
+            Original_Cola
+            <strong>1
+              <span class="a11y-hidden">개</span>
+            </strong>
+          </li>
+          <li>
+            <img src="./img/cola-green.png" alt="">
+            Green_Cola
+            <strong>2
+              <span class="a11y-hidden">개</span>
+            </strong>
+          </li> -->
         </ul>
-
         <button class="btn-get" type="button">획득</button>
-
-
       </div>
-
-
     </section>
-    <!-- section 2 -->
+    <!-- //section 1 -->
     <section class="section2">
       <div class="bg-box">
         <h2 class="title">소지금</h2>
@@ -55,7 +72,7 @@
     <section class="section3">
       <h2 class="get-title">획득한 음료</h2>
       <ul class="get-list">
-        <li>
+        <!-- <li>
           <img src="./img/cola-original.png" alt="">
           Original_Cola
           <strong>1
@@ -82,11 +99,12 @@
           <strong>5
             <span class="a11y-hidden">개</span>
           </strong>
-        </li>
+        </li> -->
       </ul>
-      <p class="total-price">총금액 : 9,000 원</p>
+      <p class="total-price">총금액 : 원</p>
     </section>
   </main>
+
 
   <script type="module" src="js/index.js"></script>
 </body>
